--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,8 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" "http://java.sun.com/dtd/web-app_2_3.dtd">
 <web-app>
-<!--
- <distributable />
+
+	<!-- <distributable />
 	<display-name>BlazeDS</display-name>
 	<description>BlazeDS Application</description>
 
@@ -87,46 +89,115 @@
 		<filter-name>CacheControlFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
- 
--->
-<servlet>
-<servlet-name>RGService</servlet-name>
-<servlet-class>
-com.sun.jersey.spi.container.servlet.ServletContainer
-</servlet-class>
-<init-param>
-<param-name>com.sun.jersey.config.property.packages</param-name>
-<param-value>com.guavus.acume.rest.api</param-value>
-</init-param>
-<init-param>
-<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
-<param-value>true</param-value>
-</init-param>
-<load-on-startup>1</load-on-startup>
-</servlet>
-<servlet>
-<servlet-name>InitServlet</servlet-name>
-<servlet-class>com.guavus.acume.servlet.AcumeInitServlet</servlet-class>
-<load-on-startup>1</load-on-startup>
-</servlet>
-<servlet-mapping>
-<servlet-name>RGService</servlet-name>
-<url-pattern>/queryresponse/aggregate</url-pattern>
-</servlet-mapping>
-<servlet-mapping>
-<servlet-name>RGService</servlet-name>
-<url-pattern>/queryresponse/timeseries</url-pattern>
-</servlet-mapping>
-<servlet-mapping>
-<servlet-name>RGService</servlet-name>
-<url-pattern>/queryresponse/search</url-pattern>
-</servlet-mapping>
-<servlet-mapping>
-<servlet-name>RGService</servlet-name>
-<url-pattern>/queryresponse/sql</url-pattern>
-</servlet-mapping>
-<welcome-file-list>
-<welcome-file>index.html</welcome-file>
-<welcome-file>index.jsp</welcome-file>
-</welcome-file-list>
-</web-app>
+ -->	<!-- servlet>
+		<servlet-name>RGService</servlet-name>
+		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+		<init-param>
+			<param-name>com.sun.jersey.config.property.packages</param-name>
+			<param-value>com.guavus.acume.rest.api</param-value>
+		</init-param>
+		<init-param>
+			<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet-->
+	<servlet>
+		<servlet-name>AcumeInitServlet</servlet-name>
+		<servlet-class>com.guavus.acume.servlet.AcumeInitServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<!-- <servlet>
+		<servlet-name>HiveInitServlet</servlet-name>
+		<servlet-class>com.guavus.acume.servlet.AcumeHiveInitServlet</servlet-class>
+		<load-on-startup>2</load-on-startup>
+	</servlet> -->
+	<!-- servlet-mapping>
+		<servlet-name>RGService</servlet-name>
+		<url-pattern>/queryresponse/aggregate</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>RGService</servlet-name>
+		<url-pattern>/queryresponse/timeseries</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>RGService</servlet-name>
+		<url-pattern>/queryresponse/search</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>RGService</servlet-name>
+		<url-pattern>/queryresponse/sql</url-pattern>
+	</servlet-mapping-->
+
+	<servlet>
+    	<servlet-name>Sql</servlet-name>
+    	<servlet-class>com.guavus.acume.core.servlet.SqlRequestServlet</servlet-class>
+  	</servlet>
+  	<servlet>
+    	<servlet-name>Aggregate</servlet-name>
+    	<servlet-class>com.guavus.acume.core.servlet.AggregateRequestServlet</servlet-class>
+  	</servlet>
+  	<servlet>
+    	<servlet-name>Search</servlet-name>
+    	<servlet-class>com.guavus.acume.core.servlet.SearchRequestServlet</servlet-class>
+  	</servlet>
+  	<servlet>
+    	<servlet-name>TimeSeries</servlet-name>
+    	<servlet-class>com.guavus.acume.core.servlet.TimeSeriesRequestServlet</servlet-class>
+  	</servlet>
+  	<servlet>
+    	<servlet-name>ValidateQuery</servlet-name>
+    	<servlet-class>com.guavus.acume.core.servlet.ValidateQueryServlet</servlet-class>
+  	</servlet>
+  	<servlet>
+    	<servlet-name>ValidDataSources</servlet-name>
+    	<servlet-class>com.guavus.acume.core.servlet.ValidDataSourcesServlet</servlet-class>
+  	</servlet>
+  	<servlet>
+    	<servlet-name>DataAvailability</servlet-name>
+    	<servlet-class>com.guavus.acume.core.servlet.DataAvailabilityServlet</servlet-class>
+  	</servlet>
+  	<servlet>
+    	<servlet-name>raeSql</servlet-name>
+    	<servlet-class>com.guavus.acume.core.servlet.RaeSqlRequestServlet</servlet-class>
+  	</servlet>
+  	
+  	<servlet-mapping>
+    	<servlet-name>Sql</servlet-name>
+    	<url-pattern>/sql</url-pattern>
+  	</servlet-mapping>
+  	<servlet-mapping>
+    	<servlet-name>raeSql</servlet-name>
+    	<url-pattern>/raeSql</url-pattern>
+  	</servlet-mapping>
+  	<servlet-mapping>
+    	<servlet-name>Aggregate</servlet-name>
+    	<url-pattern>/aggregate</url-pattern>
+  	</servlet-mapping>
+  	<servlet-mapping>
+    	<servlet-name>Search</servlet-name>
+    	<url-pattern>/search</url-pattern>
+  	</servlet-mapping>
+  	<servlet-mapping>
+    	<servlet-name>TimeSeries</servlet-name>
+    	<url-pattern>/timeseries</url-pattern>
+  	</servlet-mapping>
+  	<servlet-mapping>
+    	<servlet-name>ValidateQuery</servlet-name>
+    	<url-pattern>/ValidateQuery</url-pattern>
+  	</servlet-mapping>
+  	<servlet-mapping>
+    	<servlet-name>ValidDataSources</servlet-name>
+    	<url-pattern>/ValidDataSources</url-pattern>
+  	</servlet-mapping>
+  	<servlet-mapping>
+    	<servlet-name>DataAvailability</servlet-name>
+    	<url-pattern>/DataAvailability</url-pattern>
+  	</servlet-mapping>
+
+  	
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
+</web-app>    
