--- a/core/pom.xml
+++ b/core/pom.xml
@@ -262,8 +262,12 @@
 					<groupId>org.mortbay.jetty</groupId>
 					<artifactId>servlet-api</artifactId>
 				</exclusion>
-			</exclusions>
-		</dependency>
+				<exclusion>
+					<groupId>org.mortbay.jetty</groupId>
+					<artifactId>servlet-api-2.5</artifactId>
+	            		</exclusion>
+    			</exclusions>
+    		</dependency>
 
 		<!-- AspectJ -->
 		<dependency>
