--- a/war/pom.xml
+++ b/war/pom.xml
@@ -17,6 +17,13 @@
         <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>org.mortbay.jetty</groupId>
+      <artifactId>servlet-api-2.5</artifactId>
+      <version>6.1.14</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
     	<groupId>acume.pcsa</groupId>
     	<artifactId>utility</artifactId>
     	<version>0.1</version>
