--- a/core/pom.xml
+++ b/core/pom.xml
@@ -312,7 +312,7 @@
         <dependency>
 			<groupId>com.guavus</groupId>
 			<artifactId>attvaludf</artifactId>
-			<version>platform5.0</version>
+			<version>${pversion}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.guavus</groupId>
