--- a/core/pom.xml
+++ b/core/pom.xml
@@ -307,9 +307,17 @@
 					<groupId>org.apache.hive</groupId>
 					<artifactId>*</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>com.guavus</groupId>
+					<artifactId>attvaludf</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.guavus.common</groupId>
+            				<artifactId>attval</artifactId>
+            			</exclusion>
 			</exclusions>
 		</dependency>
-        <dependency>
+        	<dependency>
 			<groupId>com.guavus</groupId>
 			<artifactId>attvaludf</artifactId>
 			<version>${pversion}</version>
